// Copyright 2023 skylanwei authors.
//
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at
//
//     http://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.

syntax = "proto3";

option java_multiple_files = true;
option java_package = "io.grpc.ggg.user";
option java_outer_classname = "UserServerProto";
option objc_class_prefix = "GUSER";

package ggg_user;

// The user server's service definition.
service GggUserServer {

  //rpc UserRegister (UserRegisterReq) returns (UserRegisterRsp) {}

  rpc UserLogin (UserLoginReq) returns (UserLoginRsp) {}
  
  rpc UserLogOut (UserLogOutReq) returns (UserLogOutRsp) {}

}

// The request message user login
message UserLoginReq {
  string uid = 1;

}

// The response messages user login
message UserLoginRsp {
  string message = 1;
}

// The request message user login
message UserLogOutReq {
  string uid = 1;
}

// The response messages user login
message UserLogOutRsp {
  string message = 1;
}








